<resources>
    <string name="app_name">BirthdaySpecial</string>
    <string name="welcome_to_create_greetings">Welcome to Create Greetings</string>
    <string name="select_any_one">Select Any One:</string>
    <string name="background_image">background image</string>
    <string name="birthdaydesc">birthdaydesc</string>
    <string name="weddingdesc">weddingdesc</string>
    <string name="anniversarydesc">anniversarydesc</string>
    <string name="birthday_greeting">Birthday Greeting</string>
    <string name="who_s_birthday">Who\'s Birthday??</string>
    <string name="name">Name</string>
    <string name="special_message">Special message</string>
    <string name="message">Message</string>
    <string name="from_optional">From (Optional)</string>
    <string name="your_name">Your Name</string>
</resources>