<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/firstbackground"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-29dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/welcome_to_create_greetings"
        android:textColor="#8A5656"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/select_any_one"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/birthdaybutton"
        android:layout_width="380dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/birthdaydesc"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="gotobirthday"
        app:srcCompat="@drawable/birthday" />

    <ImageButton
        android:id="@+id/weddingbutton"
        android:layout_width="380dp"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitStart"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/weddingdesc"
        app:layout_constraintEnd_toEndOf="@+id/anniversarybutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/anniversarybutton"
        app:layout_constraintTop_toBottomOf="@+id/anniversarybutton"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="gotowedding"
        app:srcCompat="@drawable/wedding" />

    <ImageButton
        android:id="@+id/anniversarybutton"
        android:scaleType="fitStart"
        android:layout_width="380dp"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/birthdaybutton"
        android:contentDescription="@string/anniversarydesc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/birthdaybutton"
        app:layout_constraintTop_toBottomOf="@+id/birthdaybutton"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="gotoanniversary"
        app:srcCompat="@drawable/anniversary" />
</androidx.constraintlayout.widget.ConstraintLayout>